--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # IMPORTANT: Set the URL of your site.
 # Set to https://<username>.github.io when hosting on GitHub Pages
 # (unless you are using a custom domain).
-url:                   https://alopez.github.io
+url:                   https://transdim.github.io
 
 # IMPORTANT: Set The "base URL" of your site.
 # When your site sits in a subdirectory, set to /<name of directory>
@@ -19,16 +19,16 @@ baseurl:               ''
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Adam Lopez
+title:                 transdim
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Adam Lopez, NLP researcher 
+  transdim, NLP researcher 
 
 # A shorter description for the sidebar.
 tagline:               >
-  Researcher in <br/> Natural Language Processing
+  Machine Learning for <br/> Spatiotemporal Data Modeling
 
 # A list of keywords for your blog.
 keywords:              []
@@ -38,11 +38,11 @@ logo:                  /assets/img/me.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
-  name:                Adam Lopez
+  name:                transdim
   picture:             /assets/img/me.jpg
   social:
-    email:               'alopez@inf.ed.ac.uk'
-    github:              alopez
+    email:               'chenxy346@gmail.com'
+    github:              xinychen/transdim
 
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             >
