--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,13 +2,13 @@
 # Must be the same as `author` in `_config.yml`.
 # You can change `author1` to your shortname.
 author1:
-  name:              Adam Lopez
-  email:             alopez@inf.ed.ac.uk
+  name:              Xinyu Chen
+  email:             chenxy346@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Reader at the University of Edinburgh
+    PhD candidate at University of Montreal
 
   # This photo will be used in the about section.
   picture:
@@ -17,8 +17,8 @@ author1:
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
-    email:             alopez@inf.ed.ac.uk
-    github:            alopez
+    email:             chenxy346@gmail.com
+    github:            xinychen/transdim
     # twitter:           there_are_two_
     # linkedin:        <firstname-lastname-string>
 
